--- a/index.html
+++ b/index.html
@@ -169,40 +169,32 @@
                 <p class="pref-text">Product Designer</p>
                 <ul class="social list">
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -214,40 +206,32 @@
                 <p class="pref-text">Frontend Developer</p>
                 <ul class="social list">
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -263,40 +247,32 @@
                 <p class="pref-text">Marketing</p>
                 <ul class="social list">
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -312,40 +288,32 @@
                 <p class="pref-text">UI Designer</p>
                 <ul class="social list">
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-twitter"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-facebook"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-items">
-                    <a href=""
-                      ><div class="social-link">
-                        <div></div>
-                        <svg class="icon-social" height="16" width="16">
-                          <use href="./images/icons.svg#icon-linkedin"></use>
-                        </svg></div
-                    ></a>
+                    <a href="" class="social-link">
+                      <svg class="icon-social" height="16" width="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
