--- a/index.html
+++ b/index.html
@@ -328,28 +328,28 @@
           <h2 class="name-sect">Customers</h2>
           <ul class="customers list">
             <li class="customers-item">
-              <a href="" class="customers link">
+              <a href="" class="customers-link">
                 <svg class="icon-customers" height="56" width="104">
                   <use href="./images/icons.svg#icon-logo-company"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers link" href="">
+              <a class="customers-link" href="">
                 <svg class="icon-customers" height="56" width="104">
                   <use href="./images/icons.svg#icon-logo-foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers link" href="">
+              <a class="customers-link" href="">
                 <svg class="icon-customers" height="56" width="104">
                   <use href="./images/icons.svg#icon-logo-tagline"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers link" href="">
+              <a class="customers-link" href="">
                 <svg class="icon-customers" height="56" width="104">
                   <use
                     href="./images/icons.svg#icon-logo-tagline-company"
@@ -358,14 +358,14 @@
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers link" href="">
+              <a class="customers-link" href="">
                 <svg class="icon-customers" height="56" width="104">
                   <use href="./images/icons.svg#icon-logo-ya-co"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a class="customers link" href="">
+              <a class="customers-link" href="">
                 <svg class="icon-customers" height="56" width="104">
                   <use href="./images/icons.svg#icon-logo-brand"></use>
                 </svg>
