--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
           <svg class="icon-modal-btn" width="8" height="8">
-            <use href="./images/icons.svg#icon-linkedin"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
       </div>
